<resources>
    <string name="app_name">Калькулятор ипотеки</string>

    <!--common-->
    <string name="close">Закрыть</string>
    <string name="ok">Ок</string>
    <string name="error">Ошибка</string>
    <string name="repeat">Повторить</string>

    <!-- Money Counter screen-->
    <string name="payment_btn">Заплатил</string>
    <string name="give_payment">Введите сумму платежа</string>
    <string name="def_payment_hint">Введите платеж</string>
    <string name="give_payment_desc">Вы можете установить сумму платежа по умолчанию, она будет подставляться автоматически каждый раз, когда Вы нажмете на кнопку \"Заплатил\"</string>
    <string name="give_single_payment_desc">Пожалуйста, введите сумму Вашего платежа</string>
    <string name="incorrect_int_desc">Обратите внимание, поле не должно содержать символов отличающихся от арабских чисел</string>
    <string name="total">Сумма выплат</string>
    <string name="totalInRub">%s руб.</string>

    <!-- Navigation Drawer-->
    <string name="def_payment_btn">Сумма по умолчанию</string>
    <string name="mortage_calc">Кредитный калькулятор</string>
    <string name="alarm_clock">Напомнить о платеже</string>
    <string name="statistic">Статистика</string>
    <string name="values">Задать историю</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>

    <!-- About screen -->
    <string name="app_version">Версия ПО: %s</string>
    <string name="app_stack">Технологический стек</string>
    <string name="about_title_version_card">Здравствуйте, спасибо, что пользуетесь нашим приложением!</string>
    <string name="about_title_like_me_card">Если Вам нравится наше приложение, пожалуйста, оцените его в 5 звезд!</string>

</resources>
